[package]
name = "slayers"
version = "0.1.0"
authors = ["zhangsoledad <787953403@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.0"
serde = "1.0"
serde_derive = "1.0"
csv = "1.1"
failure = "0.1"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-rational = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
bech32 = "0.7.1"
clap = {version = "2.33.0", features = ["yaml"]}
reqwest = "0.9"
lazy_static = "1.4.0"
serde_json = "1.0"
faster-hex = "0.4.1"
indicatif = "0.12.0"
chrono = "0.4.9"
toml = "0.5"
